<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_my_profile"
        android:title="@string/my_profile"
        app:showAsAction="never"/>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/status_visible_to_booking"
            android:title="@string/status_visible_to_booking"/>
        <item
            android:id="@+id/status_public"
            android:title="@string/status_public"/>
        <item
            android:id="@+id/status_invisible"
            android:title="@string/status_invisible"/>
    </group>
</menu>
