<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_passenger_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="10.0">

        <ImageView
            android:id="@+id/ic_passenger"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_passenger" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5.6"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelBookingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvBookingName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jordan B. Anderson"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sex_dob_nationality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:weightSum="10.0">

        <ImageView
            android:id="@+id/ic_room"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_room"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/labelCabinNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/ic_room"
                android:text="@string/cabin"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvCabinNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/labelCabinNumber"
                android:layout_below="@+id/labelCabinNumber"
                android:text="312"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ic_sex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:src="@drawable/ic_sex" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelBookingSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvBookingSex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3.3"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelBookingDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dob"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvBookingDOB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="25/11/1965"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:gravity="center_vertical|right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelBookingNationality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nationality"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvBookingNationality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Norwegian"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>