<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/imgCouponDetail"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="@color/bkg_coupon_image" />

    <TextView
        android:id="@+id/tvShowDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgCouponDetail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/show_coupon"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvOfferAmountDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvShowDetail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:maxWidth="260dp"
        android:text="Title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDescriptionDetail"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tvOfferAmountDetail"
        android:layout_alignStart="@+id/tvOfferAmountDetail"
        android:layout_below="@+id/tvOfferAmountDetail"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:text="Detail"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/rlEndsDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescriptionDetail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">

        <TextView
            android:id="@+id/labelEndsDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ends"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tvExpiresDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/labelEndsDetail"
            android:layout_toRightOf="@id/labelEndsDetail"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="10sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlEndsDetail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/bkg_btn_use"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:singleLine="false"
        android:text="@string/use_coupon"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp" />
</RelativeLayout>