<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollViewRecentAndOnline"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/medium_padding"
            android:paddingEnd="@dimen/medium_padding"
            android:orientation="vertical">

            <!-- Recent contacts-->
            <RelativeLayout
                android:id="@+id/rlRecentUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin">

                <TextView
                    android:id="@+id/tvLabelRecent"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/recent"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white"/>

                <ImageView
                    android:id="@+id/imgExpandRecent"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_plus_circle_white"
                    android:visibility="gone"/>

                <View
                    android:id="@+id/dividerRecent"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@+id/tvLabelRecent"
                    android:background="@android:color/white"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewRecent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_below="@+id/dividerRecent"/>
            </RelativeLayout>

            <!-- Online contacts-->
            <RelativeLayout
                android:id="@+id/rlOnlineUsers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_margin">

                <TextView
                    android:id="@+id/tvLabelOnline"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/online"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/white"/>

                <ImageView
                    android:id="@+id/imgExpandOnline"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_plus_circle_white"
                    android:visibility="gone"/>

                <View
                    android:id="@+id/dividerOnline"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/tvLabelOnline"
                    android:background="@android:color/white"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerViewOnline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_below="@+id/dividerOnline"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/medium_margin"
        android:visibility="gone"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/loadingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/loadingProgressView"
            android:layout_width="@dimen/circular_progress_bar_size"
            android:layout_height="@dimen/circular_progress_bar_size"/>
        <TextView
            android:id="@+id/tvLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/noConnectionView"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/retryLoad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@drawable/bg_white_rounded_primary_outline"
            android:text="@string/retry"/>
    </LinearLayout>
</RelativeLayout>